change subscribe form texts ' '

--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -3,7 +3,7 @@
     <div class="ml-form-embedWrapper">
       <div class="ml-form-embedBody ml-form-embedBodyDefault row-form">
         <div class="ml-form-embedContent">
-          <h4>Get this ebook!</h4>
+          <h4>Subscribe To Access</h4>
         </div>
         <form class="ml-block-form" action="https://app.mailerlite.com/webforms/submit/m3g0e6" data-code="m3g0e6" method="post" target="_blank">
           <div class="ml-form-formContent">
@@ -29,7 +29,7 @@
 
           <input type="hidden" name="ml-submit" value="1">
           <div class="ml-form-embedSubmit">
-            <button type="submit" class="primary">Download Guide</button>
+            <button type="submit" class="primary">Send Me Guides!</button>
             <button disabled="disabled" style="display: none;" type="button" class="loading">
               <div class="ml-form-embedSubmitLoad"></div>
             </button>
@@ -39,7 +39,7 @@
       <div class="ml-form-successBody row-success" style="display: none">
         <div class="ml-form-successContent">
           <h4>Thank you!</h4>
-          <p>Please check your email for the download link</p>
+          <p>Please check your email for the download links.</p>
         </div>
       </div>
     </div>
