--- a/_sass/card.scss
+++ b/_sass/card.scss
@@ -13,7 +13,11 @@
 }
 
 .card-wallet {
-  margin-top: 60px
+  margin-top: 60px;
+
+  @include sm {
+    margin-top: 30px
+  }
 }
 
 .card-icon {
@@ -24,12 +28,21 @@
   display: flex;
   flex-direction: column;
   padding: 5px 0 5px 20px;
+  overflow: hidden;
+
+  @include sm {
+    padding-top: 0;
+  }
 }
 
 .card-title {
   font-size: 22px;
   line-height: 26px;
   color: $light;
+
+  @include sm {
+    font-size: 18px;
+  }
 }
 
 .card-description {
@@ -37,4 +50,8 @@
   font-size: 17px;
   line-height: 20px;
   color: $grey;
+
+  @include sm {
+    font-size: 14px;
+  }
 }
