Design page "btc-in-simple-term"

--- a/_layouts/in-simple-terms.html
+++ b/_layouts/in-simple-terms.html
@@ -2,44 +2,41 @@
 <html lang="en">
   {% include html-head.html %}
   <body>
-  {% include header.html %}
+    {% include header.html %}
 
     <main role="main">
       <div class="section-dark">
         <div class="container">
-          <div class="section-column">
-            <div class="secondary-title">Bitcoin Explaining in Simple Terms</div>
-
-            <div class="guides-viewer">
-              <div class="guide-view">
-                <img id="guide-selected" src="/assets/images/btc-in-simple-term/6.png" alt=""/>
+          <div class="section">
+            <div class="section-half">
+              <div class="secondary-title">Bitcoin Explaining in Simple Terms</div>
+              <div class="section-description">
+                Crypto newcomers have a mountain of questions.<br><br>
+                What is Bitcoin?<br><br>
+                Why should you care about crypto?<br><br>
+                What makes Bitcoin so unique?<br><br>
+                How does it work?<br><br>
+                And how can you invest?<br><br>
+                The purpose of this eBook is to answer those questions by introducing you to Bitcoin and other
+                cryptocurrencies in simple terms and an easy-to-digest manner.<br><br>
+                This guide was written for someone who has little to no technical knowledge about Bitcoin, crypto, or
+                blockchains.<br><br>
+                To aid accessibility, some of the technical concepts have been simplified to make it easier for a
+                non-technical person to grasp the essential information.<br><br>
+                This eBook is completely free and can be downloaded by completing a simple form on our partner’s
+                website.
+                By doing so, you will also be subscribed to our email newsletter.<br><br>
               </div>
-              <div class="guide-thumbs">
-                <div class="guide-thumb" datasrc="1"><img src="/assets/images/btc-in-simple-term/1-thumb.png" alt=""/></div>
-                <div class="guide-thumb" datasrc="2"><img src="/assets/images/btc-in-simple-term/2-thumb.png" alt=""/></div>
-                <div class="guide-thumb" datasrc="3"><img src="/assets/images/btc-in-simple-term/3-thumb.png" alt=""/></div>
-                <div class="guide-thumb" datasrc="4"><img src="/assets/images/btc-in-simple-term/4-thumb.png" alt=""/></div>
-                <div class="guide-thumb" datasrc="5"><img src="/assets/images/btc-in-simple-term/5-thumb.png" alt=""/></div>
-                <div class="guide-thumb current" datasrc="6"><img src="/assets/images/btc-in-simple-term/6-thumb.png" alt=""/></div>
+            </div>
+            <div class="section-right">
+              <div class="" style="text-align: center;">
+                <img src="/assets/images/btc-in-simple-term/Bitcoin-Explained-Simple-Terms-001.png" alt="Bitcoin Explaining in Simple Terms" height="480">
+                <button id="btc-simple" class="btn" style="margin-top: 20px">Look Inside</button>
               </div>
             </div>
           </div>
-          <div class="guides-viewer">
-            Crypto newcomers have a mountain of questions. <br><br>
-            What is Bitcoin?<br><br>
-            Why should you care about crypto?<br><br>
-            What makes Bitcoin so unique?<br><br>
-            How does it work?<br><br>
-            And how can you invest?<br><br>
-            The purpose of this eBook is to answer those questions by introducing you to Bitcoin and other
-            cryptocurrencies in simple terms and an easy-to-digest manner.<br><br>
-            This guide was written for someone who has little to no technical knowledge about Bitcoin, crypto, or
-            blockchains.<br><br>
-            To aid accessibility, some of the technical concepts have been simplified to make it easier for a
-            non-technical person to grasp the essential information.<br><br>
-            This eBook is completely free and can be downloaded by completing a simple form on our partner’s website. By
-            doing so, you will also be subscribed to our email newsletter. <br><br><br>
-          </div>
+        </div>
+        <div class="container">
           <div class="form-wrap">
             {% include subscribe-form.html %}
           </div>
