Normalize fonts and colors

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <div class="container">
-    <div class="footer-block">
+    <div class="footer-block small-text">
       <div class="footer-menu">
         <div class="bottom-menu bottom-menu-title">Company</div>
         <div class="bottom-menu">Photo Gallery</div>
