--- a/_includes/subscribe-form.html
+++ b/_includes/subscribe-form.html
@@ -29,7 +29,7 @@
 
           <input type="hidden" name="ml-submit" value="1">
           <div class="ml-form-embedSubmit">
-            <button type="submit" class="primary">Send Me Guides!</button>
+            <button type="submit" class="btn">Send Me Guides!</button>
             <button disabled="disabled" style="display: none;" type="button" class="loading">
               <div class="ml-form-embedSubmitLoad"></div>
             </button>
