--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
           <div class="banner">
             <img src="/assets/images/horse.gif" alt="Binary horse" class="horse"/>
 
-            <div class="main-title">
+            <div class="large-title">
               Unstoppable Code
             </div>
 
@@ -25,14 +25,14 @@
               <div class="section-third gallery-section">
                 <div class="image-review gallery-item"></div>
                 <div class="gallery-title" id="open-gallery">
-                  <span>Gallery</span>
+                  <span class="header-2">Gallery</span>
                 </div>
               </div>
 
               <div class="section-right gallery-section">
                 <div class="video-review gallery-item"></div>
                 <a class="gallery-title" href="https://www.youtube.com/watch?v=-qjzSUdeId0" data-fancybox="video">
-                  <img src="/assets/images/gallery/play.png" alt="Play Video"> <span>Play Office</span>
+                  <img src="/assets/images/gallery/play.png" alt="Play Video"> <span class="header-2">Play Office</span>
                 </a>
               </div>
             </div>
@@ -44,14 +44,14 @@
         <div class="container">
           <div class="section">
             <div class="section-half">
-              <div class="secondary-title">Apps We Built</div>
+              <div class="secondary-title header-1">Apps We Built</div>
 
               <div class="card card-wallet">
                 <div class="card-icon">
                   <img src="/assets/images/card/unstoppable-wallet.png" alt="Unstoppable Wallet"/>
                 </div>
                 <div class="card-info">
-                  <div class="card-title">Unstoppable Wallet</div>
+                  <div class="card-title header-2">Unstoppable Wallet</div>
                   <div class="card-description">
                     Invest in Bitcoin, Ethereum, EOS, Binance DEX and 60+ projects. Non-custodial, p2p, private, decentralized crypto wallet app.
                   </div>
@@ -74,7 +74,7 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section-column">
-            <div class="secondary-title">Guides Published</div>
+            <div class="secondary-title header-1">Guides Published</div>
 
             <div class="section-description">
               Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. We explain these projects in simple terms helping investors to onboard these decentralized economies as a pioneer.
@@ -88,7 +88,7 @@
                       <img src="/assets/images/card/in-simple-term.png" alt="Bitcoin Explaining in Simple Terms"/>
                     </div>
                     <div class="card-info">
-                      <div class="card-title">Bitcoin Explained in Simple Terms</div>
+                      <div class="card-title header-2">Bitcoin Explained in Simple Terms</div>
                       <div class="card-description">
                         What is Bitcoin? What makes it unique? How it works? Why should you care? And why to invest now?
                       </div>
@@ -102,7 +102,7 @@
                     <img src="/assets/images/card/libra.png" alt="What is Libra"/>
                   </div>
                   <div class="card-info">
-                    <div class="card-title">What is Libra</div>
+                    <div class="card-title header-2">What is Libra</div>
                     <div class="card-description">
                         What is Libra project? Why it's being built? What it means for people, crypto and traditional financial services?
                     </div>
@@ -115,7 +115,7 @@
                     <img src="/assets/images/card/ethereum.png" alt="Ethereum"/>
                   </div>
                   <div class="card-info">
-                    <div class="card-title">Ethereum</div>
+                    <div class="card-title header-2">Ethereum</div>
                     <div class="card-description">
                       coming soon ...
                     </div>
@@ -134,7 +134,7 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section-column">
-            <div class="secondary-title">Code Released</div>
+            <div class="secondary-title header-1">Code Released</div>
 
             <div class="section-description">
               We believe good ideas should be Unstoppable. As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. Use our libraries to design autonomous systems that can't go offline.
@@ -145,7 +145,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/btc.png" alt="Bitcoin Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title">Bitcoin Kit</div>
+                    <div class="card-title header-2">Bitcoin Kit</div>
                     <div class="card-description">iOS /  Android</div>
                   </div>
                 </div>
@@ -154,7 +154,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/eth.png" alt="Ethereum Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title">Ethereum Kit</div>
+                    <div class="card-title header-2">Ethereum Kit</div>
                     <div class="card-description">iOS /  Android</div>
                   </div>
                 </div>
@@ -163,7 +163,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/eos.png" alt="EOS Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title">EOS Kit</div>
+                    <div class="card-title header-2">EOS Kit</div>
                     <div class="card-description">iOS /  Android</div>
                   </div>
                 </div>
@@ -172,7 +172,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/binance.png" alt="Binance Chain Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title">Binance Chain Kit</div>
+                    <div class="card-title header-2">Binance Chain Kit</div>
                     <div class="card-description">iOS /  Android</div>
                   </div>
                 </div>
@@ -181,7 +181,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/swap.png" alt="Atomic Swap"/></div>
                   <div class="card-info">
-                    <div class="card-title">Atomic Swap</div>
+                    <div class="card-title header-2">Atomic Swap</div>
                     <div class="card-description">iOS /  Android</div>
                   </div>
                 </div>
@@ -190,7 +190,7 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/lightning.png" alt="Lightning Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title">Lightning Kit</div>
+                    <div class="card-title header-2">Lightning Kit</div>
                     <div class="card-description">Soon</div>
                   </div>
                 </div>
@@ -208,7 +208,7 @@
                 <img alt="Team" src="/assets/images/hs.png"/>
               </div>
 
-              <div class="secondary-title user-name">Team</div>
+              <div class="secondary-title header-1 user-name">Team</div>
               <div class="section-description">
                 Nickname Raph, is a fictional character and one of the four main characters of the Teenage Mutant Ninja
                 Turtles comics and all related media.
