--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
              srcset="/assets/images/hs-logo@2x.png 2x, /assets/images/hs-logo@3x.png 3x"/>
       </a>
 
-      <div class="nav">
+      <div class="nav small-text">
         <div class="nav-item"><a href="/">Home</a></div>
         <div class="nav-item">Contact</div>
         <div class="nav-item"><a href="https://github.com/horizontalsystems" target="_blank">GitHub</a></div>
