update cookie text

--- a/_includes/gdpr-popup.html
+++ b/_includes/gdpr-popup.html
@@ -8,11 +8,10 @@
       </svg>
     </div>
     <div class="gdpr-description body-text">
-      To make this site work properly, we sometimes place small data files called cookies on your device. Most big
-      websites do this too.
+      This website uses cookies to improve your experience. We'll assume you're ok with this, but you can opt-out if you wish.
     </div>
     <div class="gdpr-actions">
-      <button id="accept-cookie" class="btn" style="width: 120px">OK</button>
+      <button id="accept-cookie" class="btn" style="width: 120px">Accept</button>
     </div>
   </div>
 </div>
