add links to libraries

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -137,7 +137,7 @@
             <div class="secondary-title header-1">Code Released</div>
 
             <div class="section-description">
-              We believe good ideas should be Unstoppable. As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. Use our libraries to design autonomous systems that can't go offline.
+              We believe good ideas should be Unstoppable.<br><br>As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. Use our libraries to design autonomous systems that can't go offline.
             </div>
 
             <div class="guides">
@@ -145,8 +145,8 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/btc.png" alt="Bitcoin Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title header-2">Bitcoin Kit</div>
-                    <div class="card-description">iOS /  Android</div>
+                    <div class="card-title header-2">Bitcoin SPV Kit</div>
+                    <div class="card-description"><a href="https://github.com/horizontalsystems/bitcoin-kit-ios">iOS</a> / <a href="https://github.com/horizontalsystems/bitcoin-kit-android">Android</a></div>
                   </div>
                 </div>
               </div>
@@ -155,16 +155,16 @@
                   <div class="card-icon"><img src="/assets/images/codes/eth.png" alt="Ethereum Kit"/></div>
                   <div class="card-info">
                     <div class="card-title header-2">Ethereum Kit</div>
-                    <div class="card-description">iOS /  Android</div>
+                    <div class="card-description"><a href="https://github.com/horizontalsystems/ethereum-kit-ios">iOS</a> / <a href="https://github.com/horizontalsystems/ethereum-kit-android">Android</a></div>
                   </div>
                 </div>
               </div>
               <div class="guide">
                 <div class="card">
-                  <div class="card-icon"><img src="/assets/images/codes/eos.png" alt="EOS Kit"/></div>
+                  <div class="card-icon"><img src="/assets/images/codes/eos.png" alt="EOSIO Kit"/></div>
                   <div class="card-info">
                     <div class="card-title header-2">EOS Kit</div>
-                    <div class="card-description">iOS /  Android</div>
+                    <div class="card-description"><a href="https://github.com/horizontalsystems/eos-kit-ios">iOS</a> / <a href="https://github.com/horizontalsystems/eos-kit-android">Android</a></div>
                   </div>
                 </div>
               </div>
@@ -172,8 +172,8 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/binance.png" alt="Binance Chain Kit"/></div>
                   <div class="card-info">
-                    <div class="card-title header-2">Binance Chain Kit</div>
-                    <div class="card-description">iOS /  Android</div>
+                    <div class="card-title header-2">Binance DEX Kit</div>
+                    <div class="card-description"><a href="https://github.com/horizontalsystems/binance-chain-kit-ios">iOS</a> / <a href="https://github.com/horizontalsystems/binance-chain-kit-android">Android</a></div>
                   </div>
                 </div>
               </div>
@@ -181,8 +181,8 @@
                 <div class="card">
                   <div class="card-icon"><img src="/assets/images/codes/swap.png" alt="Atomic Swap"/></div>
                   <div class="card-info">
-                    <div class="card-title header-2">Atomic Swap</div>
-                    <div class="card-description">iOS /  Android</div>
+                    <div class="card-title header-2">Atomic Swaps Kit</div>
+                    <div class="card-description"><a href="https://github.com/horizontalsystems/atomic-swap-kit-ios">iOS</a> / <a href="https://github.com/horizontalsystems/atomic-swap-kit-android">Android</a></div>
                   </div>
                 </div>
               </div>
@@ -191,7 +191,7 @@
                   <div class="card-icon"><img src="/assets/images/codes/lightning.png" alt="Lightning Kit"/></div>
                   <div class="card-info">
                     <div class="card-title header-2">Lightning Kit</div>
-                    <div class="card-description">Soon</div>
+                    <div class="card-description">coming soon ... </div>
                   </div>
                 </div>
               </div>
@@ -210,8 +210,7 @@
 
               <div class="secondary-title header-1 user-name">Team</div>
               <div class="section-description">
-                Nickname Raph, is a fictional character and one of the four main characters of the Teenage Mutant Ninja
-                Turtles comics and all related media.
+                ..................
               </div>
             </div>
 
