--- a/_layouts/in-simple-terms.html
+++ b/_layouts/in-simple-terms.html
@@ -23,9 +23,7 @@
                 blockchains.<br><br>
                 To aid accessibility, some of the technical concepts have been simplified to make it easier for a
                 non-technical person to grasp the essential information.<br><br>
-                This eBook is completely free and can be downloaded by completing a simple form on our partner’s
-                website.
-                By doing so, you will also be subscribed to our email newsletter.<br><br>
+                This eBook is completely free and can be downloaded by subscribing to our newsletter.<br><br>
               </div>
             </div>
             <div class="section-right">
@@ -56,18 +54,13 @@
                 standard cryptocurrency transfer features.
                 <br><br>
                 Inspired by emerging notions such as programmable money, decentralized systems, and unstoppable code, he
-                co-founded Horizontal Systems in early 2018. The company is entirely self-funded with a team of 15
-                senior engineers. Driven by libertarian ideas. Horizontal Systems team builds a new breed of
+                co-founded Horizontal Systems in early 2018. Horizontal Systems builds a new breed of
                 applications which are peer-to-peer and not reliant on any external entity to operate.
                 <br><br>
                 Prior to Horizontal Systems, he was the CEO of Grouvi Ltd., a B2B software development company where he
                 led his team in building messenger apps for corporations.
                 <br><br>
-                Back in 2007, right out of college, he launched MakeUseOf Ltd. (makeuseof.com) which, in 10 years became
-                the leading consumer tech journal with over 50 professional writers. MakeUseOf serves over 15 million
-                readers every month.
-                <br><br>
-                When not working, he spends his time educating people on Bitcoin and public blockchains.
+                Back in 2007, right out of college, he launched MakeUseOf Ltd. (<a href="https://makeuseof.com" target="_blank">makeuseof.com</a>) which, in 10 years became the leading consumer tech journal with over 50 professional writers. MakeUseOf serves over 15 million readers every month.
               </div>
             </div>
           </div>
