minor text layout edits

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -77,7 +77,7 @@
             <div class="secondary-title header-1">Guides Published</div>
 
             <div class="section-description">
-              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. We explain these projects in simple terms helping investors to onboard these decentralized economies as a pioneer.
+              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. <br><br> We explain these blockchain projects in simple terms helping potential investors onboard these decentralized economies as a pioneer.
             </div>
 
             <div class="guides">
@@ -137,7 +137,7 @@
             <div class="secondary-title header-1">Code Released</div>
 
             <div class="section-description">
-              We believe good ideas should be Unstoppable.<br><br>As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. Use our libraries to design autonomous systems that can't go offline.
+              We believe good ideas should be Unstoppable.<br><br>As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. <br><br>Use our libraries to design autonomous systems that can't go offline.
             </div>
 
             <div class="guides">
