add link to unstoppable

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,17 +46,20 @@
             <div class="section-half">
               <div class="secondary-title header-1">Apps We Built</div>
 
-              <div class="card card-wallet">
-                <div class="card-icon">
-                  <img src="/assets/images/card/unstoppable-wallet.png" alt="Unstoppable Wallet"/>
-                </div>
-                <div class="card-info">
-                  <div class="card-title header-2">Unstoppable Wallet</div>
-                  <div class="card-description">
-                    Invest in Bitcoin, Ethereum, EOS, Binance DEX and 60+ projects. Non-custodial, p2p, private, decentralized crypto wallet app.
+              <a href="https://unstoppable.money" target="_blank">
+                <div class="card card-wallet">
+                  <div class="card-icon">
+                    <img src="/assets/images/card/unstoppable-wallet.png" alt="Unstoppable Wallet"/>
+                  </div>
+                  <div class="card-info">
+                    <div class="card-title header-2">Unstoppable Wallet</div>
+                    <div class="card-description">
+                      Invest in Bitcoin, Ethereum, EOS, Binance DEX and 60+ projects. Non-custodial, p2p, private, decentralized crypto wallet app.
+                    </div>
                   </div>
                 </div>
-              </div>
+              </a>  
+
             </div>
 
             <div class="section-right">
