change home text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="section-description">
-              Enforcing your rights to private wealth and privacy.
+              Good ideas should be unstoppable
             </div>
           </div>
         </div>
@@ -44,7 +44,7 @@
         <div class="container">
           <div class="section">
             <div class="section-half">
-              <div class="secondary-title header-1">Apps We Built</div>
+              <div class="secondary-title header-1">Apps</div>
 
               <a href="https://unstoppable.money" target="_blank">
                 <div class="card card-wallet">
@@ -77,10 +77,10 @@
       <div class="section-gradient">
         <div class="container">
           <div class="section-column">
-            <div class="secondary-title header-1">Guides Published</div>
+            <div class="secondary-title header-1">Guides</div>
 
             <div class="section-description">
-              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. <br><br> We explain these blockchain projects in simple terms helping potential investors onboard these decentralized economies as a pioneer.
+              Understand how Bitcoin, Ethereum, EOS, Libra and other major blockchains work. <br><br> We explain these projects in simple terms making it easier to onboard these decentralized markets as a pioneer.
             </div>
 
             <div class="guides">
@@ -140,7 +140,7 @@
             <div class="secondary-title header-1">Code Released</div>
 
             <div class="section-description">
-              We believe good ideas should be Unstoppable.<br><br>As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. <br><br>Use our libraries to design autonomous systems that can't go offline.
+              As we sail through uncharted waters of building decentralized services we keep 100% of our work public and open source. <br><br>We believe good ideas should be Unstoppable! Use our libraries to design autonomous systems that can't go offline.
             </div>
 
             <div class="guides">
