--- a/src/index.scss
+++ b/src/index.scss
@@ -1,8 +1,11 @@
 @import "~normalize.css";
+@import "./scss/utils";
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Helvetica Neue", "Lucida Grande", sans-serif;
+  font-family: $font-family-base;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
+  padding: 0;
+  background: #0F1014;
 }
