Display Subscribe form in modal window

--- a/src/components/Subscribe/Subscribe.scss
+++ b/src/components/Subscribe/Subscribe.scss
@@ -75,6 +75,12 @@
   margin: 0 0 10px 0;
   width: 100%;
 }
+.ml-form-embedBody {
+  max-width: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .ml-form-embedBody .ml-form-fieldRow input {
   width: 100% !important;
   height: 60px;
@@ -101,8 +107,10 @@
   font-size: 13px;
   text-align: left;
   padding-left: 25px;
+
   a {
     text-decoration: underline;
+    color: white;
   }
 }
 .ml-form-embedBody .ml-form-embedSubmit button.loading {
