Update internal and external links

--- a/src/components/ButtonText/ButtonText.scss
+++ b/src/components/ButtonText/ButtonText.scss
@@ -13,6 +13,11 @@
   margin-right: 24px;
   color: $remus;
 
+  a {
+    color: $remus;
+    text-decoration: none;
+  }
+
   @include sm {
     padding: 10px;
   }
