--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -28,6 +28,10 @@
   display: flex;
   color: $gray-light;
   justify-content: space-between;
+
+  a {
+    text-decoration: none;
+  }
 }
 
 .horse {
